Added info command to retrieve chat details and handle different chat types (channel or direct); "tau" renamed to "chat"